; ModuleID = '/home/carl/AnghaBench/Atlas/lib/extr_mysql-password.c_lua_password_hash.c'
source_filename = "/home/carl/AnghaBench/Atlas/lib/extr_mysql-password.c_lua_password_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lua_password_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lua_password_hash(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i8* @luaL_checklstring(i32* %6, i32 1, i64* %3)
  store i8* %7, i8** %4, align 8
  %8 = call i32* @g_string_new(i32* null)
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = load i64, i64* %3, align 8
  %12 = call i32 @network_mysqld_proto_password_hash(i32* %9, i8* %10, i64 %11)
  %13 = load i32*, i32** %2, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @S(i32* %14)
  %16 = call i32 @lua_pushlstring(i32* %13, i32 %15)
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* @TRUE, align 4
  %19 = call i32 @g_string_free(i32* %17, i32 %18)
  ret i32 1
}

declare dso_local i8* @luaL_checklstring(i32*, i32, i64*) #1

declare dso_local i32* @g_string_new(i32*) #1

declare dso_local i32 @network_mysqld_proto_password_hash(i32*, i8*, i64) #1

declare dso_local i32 @lua_pushlstring(i32*, i32) #1

declare dso_local i32 @S(i32*) #1

declare dso_local i32 @g_string_free(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
